--- a/KawhiLeonard.html
+++ b/KawhiLeonard.html
@@ -13,7 +13,7 @@
 <li><a href="KevinDurant.html">Kevin Durant</a></li>
 <li><a href="KawhiLeonard.html">kawhi Leonard</a></li>
 </ul>
-<h2>Paul George</h2>
+<h2>Kawhi Leonard</h2>
 
 <p>
     Kawhi Anthony Leonard (/kəˈwaɪ/, born June 29, 1991) is an American professional basketball player for the Los Angeles Clippers of the National Basketball Association (NBA). He played two seasons of college basketball for the San Diego State Aztecs and was named a consensus second-team All-American as a sophomore. Leonard opted to forgo his final two seasons at San Diego State to enter the 2011 NBA draft. He was selected by the Indiana Pacers with the 15th overall pick before being traded to the San Antonio Spurs on draft night.
