--- a/index.html
+++ b/index.html
@@ -15,5 +15,17 @@
 </ul>
 <h2>Click on the players' names</h2>
 <img src="index.png" width="30%">
+<p>
+    <div id="disqus_thread"></div>
+<script>
+(function() { 
+var d = document, s = d.createElement('script');
+s.src = 'https://best-small-forwards.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</p>
 </body>
 </html>
