--- a/PaulGeorge.html
+++ b/PaulGeorge.html
@@ -14,15 +14,46 @@
 
 <title>Paul George</title>
 <meta charset="utf-8">
+<style>
+  body {
+    margin:0px;
+  }
+  a {
+    color:black;
+    text-decoration:none;
+  }
+  h1 { 
+    margin-top:0px;
+    font-size:60px;
+    border-bottom: 1px solid gray;
+    padding-bottom:20px;
+    margin:0px;
+    
+  }
+  ul {
+    border-right : 1px solid gray;
+    width:150px;
+    margin:0px;
+    padding:10px;
+    padding-left:30px;
+    padding-right:0px;
+  }
+  #grid {
+    display:grid;
+    grid-template-columns: 150px 1fr;
+  }
+</style>
 </head>
 
 <body>
 <h1><a href="index.html">Best small forwards</a></h1>
+<div id="grid">
 <ul>
 <li><a href="PaulGeorge.html">Paul George</a></li>
 <li><a href="KevinDurant.html">Kevin Durant</a></li>
 <li><a href="KawhiLeonard.html">kawhi Leonard</a></li>
 </ul>
+<div>
 <h2>Paul George</h2>
 
 <p>
@@ -34,6 +65,8 @@
 <p>
     George played high school basketball for Knight High School before playing two seasons of college basketball at Fresno State. He was selected by the Indiana Pacers with the 10th overall pick of the 2010 NBA draft, and earned NBA All-Rookie Second Team honors. He was named the NBA Most Improved Player in 2013, when he also earned his first All-Star selection. George suffered a broken leg in 2014 while competing for a roster spot on the United States national team for the FIBA Basketball World Cup. He missed most of the 2014–15 season, but recovered to become an All-Star again in 2016, when he also won an Olympic gold medal. He was traded to the Oklahoma City Thunder in 2017, and played two seasons for the Thunder before he was traded to the Clippers in 2019.
 </p>
+</div>
+</div>
 </body>
 
 </html>
