--- a/KevinDurant.html
+++ b/KevinDurant.html
@@ -11,18 +11,20 @@
 
   gtag('config', 'UA-171528921-1');
 </script>
-
+<link rel="stylesheet" href="style.css">
 <title>Kevin Durant</title>
 <meta charset="utf-8">
 </head>
 
 <body>
 <h1><a href="index.html">Best small forwards</a></h1>
+<div id="grid">
 <ul>
 <li><a href="PaulGeorge.html">Paul George</a></li>
 <li><a href="KevinDurant.html">Kevin Durant</a></li>
 <li><a href="KawhiLeonard.html">kawhi Leonard</a></li>
 </ul>
+<div id="article">
 <h2>Kevin Durant</h2>
 
 <p>
@@ -34,6 +36,8 @@
 <p>
     Durant was a heavily recruited high school prospect who was widely regarded as the second-best player in his class. In college, he won numerous year-end awards and became the first freshman to be named Naismith College Player of the Year. As a professional, he has won two NBA championships, an NBA Most Valuable Player Award, two Finals MVP Awards, two NBA All-Star Game Most Valuable Player Awards, four NBA scoring titles, the NBA Rookie of the Year Award, and two Olympic gold medals. Durant has also been selected to <strong>nine All-NBA teams</strong> and <strong>ten NBA All-Star teams</strong>.
 </p>
+</div>
+</div>
 </body>
 
 </html>
