--- a/PaulGeorge.html
+++ b/PaulGeorge.html
@@ -14,35 +14,7 @@
 
 <title>Paul George</title>
 <meta charset="utf-8">
-<style>
-  body {
-    margin:0px;
-  }
-  a {
-    color:black;
-    text-decoration:none;
-  }
-  h1 { 
-    margin-top:0px;
-    font-size:60px;
-    border-bottom: 1px solid gray;
-    padding-bottom:20px;
-    margin:0px;
-    
-  }
-  ul {
-    border-right : 1px solid gray;
-    width:150px;
-    margin:0px;
-    padding:10px;
-    padding-left:30px;
-    padding-right:0px;
-  }
-  #grid {
-    display:grid;
-    grid-template-columns: 150px 1fr;
-  }
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -53,7 +25,7 @@
 <li><a href="KevinDurant.html">Kevin Durant</a></li>
 <li><a href="KawhiLeonard.html">kawhi Leonard</a></li>
 </ul>
-<div>
+<div id="article">
 <h2>Paul George</h2>
 
 <p>
