--- a/index.html
+++ b/index.html
@@ -11,20 +11,24 @@
 
   gtag('config', 'UA-171528921-1');
 </script>
-
+<link rel="stylesheet" href="style.css">
 <title>Best small forwards</title>
 <meta charset="utf-8">
 </head>
 
 <body>
 <h1><a href="index.html">Best small forwards</a></h1>
+<div id="grid">
 <ul>
 <li><a href="PaulGeorge.html">Paul George</a></li>
 <li><a href="KevinDurant.html">Kevin Durant</a></li>
 <li><a href="KawhiLeonard.html">kawhi Leonard</a></li>
 </ul>
+<div id="article">
 <h2>Click on the players' names</h2>
 <img src="index.png" width="30%">
+</div>
+</div>
 <p>
     <div id="disqus_thread"></div>
 <script>
