--- a/PaulGeorge.html
+++ b/PaulGeorge.html
@@ -19,17 +19,27 @@
 
 <body>
 <h1><a href="index.html">Best small forwards</a></h1>
+<input type="button" value="Dark mode" onclick="
+document.querySelector('body').style.backgroundColor='black';
+document.querySelector('body').style.color='white';
+
+">
+<input type="button" value="Light mode" onclick="
+document.querySelector('body').style.backgroundColor='white';
+document.querySelector('body').style.color='black';
+
+">
 <div id="grid">
 <ul>
-<li><a href="PaulGeorge.html">Paul George</a></li>
-<li><a href="KevinDurant.html">Kevin Durant</a></li>
-<li><a href="KawhiLeonard.html">kawhi Leonard</a></li>
+<li><a class="a" href="PaulGeorge.html">Paul George</a></li>
+<li><a class="a" href="KevinDurant.html">Kevin Durant</a></li>
+<li><a class="a" href="KawhiLeonard.html">kawhi Leonard</a></li>
 </ul>
 <div id="article">
 <h2>Paul George</h2>
 
 <p>
-    <a href="https://www.instagram.com/ygtrece/" target="_blank" title="instagram">Paul Clifton Anthony George</a> (born May 2, 1990) is an American professional basketball player for the Los Angeles Clippers of the National Basketball Association (NBA). He is a <strong>six-time NBA All-Star</strong> and <strong>five-time All-NBA Team selection</strong>, as well as a four-time member of the NBA All-Defensive Team.
+    <a class="a" href="https://www.instagram.com/ygtrece/" target="_blank" title="instagram">Paul Clifton Anthony George</a> (born May 2, 1990) is an American professional basketball player for the Los Angeles Clippers of the National Basketball Association (NBA). He is a <strong>six-time NBA All-Star</strong> and <strong>five-time All-NBA Team selection</strong>, as well as a four-time member of the NBA All-Defensive Team.
 </p>
 
 <img src="PaulGeorge.jpg" width="40%">
