--- a/KevinDurant.html
+++ b/KevinDurant.html
@@ -18,6 +18,16 @@
 
 <body>
 <h1><a href="index.html">Best small forwards</a></h1>
+<input type="button" value="Dark mode" onclick="
+document.querySelector('body').style.backgroundColor='black';
+document.querySelector('body').style.color='white';
+
+">
+<input type="button" value="Light mode" onclick="
+document.querySelector('body').style.backgroundColor='white';
+document.querySelector('body').style.color='black';
+
+">
 <div id="grid">
 <ul>
 <li><a href="PaulGeorge.html">Paul George</a></li>
