--- a/PaulGeorge.html
+++ b/PaulGeorge.html
@@ -19,15 +19,30 @@
 
 <body>
 <h1><a href="index.html">Best small forwards</a></h1>
-<input type="button" value="Dark mode" onclick="
-document.querySelector('body').style.backgroundColor='black';
-document.querySelector('body').style.color='white';
+<input id="dark_light" type="button" value="Dark mode" onclick="
+var target=document.querySelector('body');
+if (this.value==='Dark mode') {
+  target.style.backgroundColor='black';
+  target.style.color='white';
+  this.value='Light mode';
 
-">
-<input type="button" value="Light mode" onclick="
-document.querySelector('body').style.backgroundColor='white';
-document.querySelector('body').style.color='black';
-
+  var alist = document.querySelectorAll('a');
+  var i=0;
+  while (i < alist.length) {
+    alist[i].style.color='powderblue';
+    i = i+1;
+  }
+} else {
+  target.style.backgroundColor='white';
+  target.style.color='black';
+  this.value='Dark mode';
+  var alist = document.querySelectorAll('a');
+  var i=0;
+  while (i < alist.length) {
+    alist[i].style.color='darkblue';
+    i = i+1;
+  }
+}
 ">
 <div id="grid">
 <ul>
