--- a/index.html
+++ b/index.html
@@ -2,15 +2,7 @@
 <html>
 
 <head>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-171528921-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-171528921-1');
-</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <link rel="stylesheet" href="style.css">
 <title>Best small forwards</title>
 <meta charset="utf-8">
@@ -18,30 +10,44 @@
 </head>
 
 <body>
-<h1><a href="index.html">Best small forwards</a></h1>
+<h1><a href="#!index" onclick="fetchPage('index')">Best small forwards</a></h1>
 <input id="dark_light" type="button" value="Dark mode" onclick="darkLightHandler(this);">
 <div id="grid">
-<ul>
-<li><a href="PaulGeorge.html">Paul George</a></li>
-<li><a href="KevinDurant.html">Kevin Durant</a></li>
-<li><a href="KawhiLeonard.html">kawhi Leonard</a></li>
+<ul id="nav">
 </ul>
 <div id="article">
-<h2>Click on the players' names</h2>
-<img src="index.png" width="30%">
+
+<article>
+</article>
 </div>
 </div>
-<p>
-    <div id="disqus_thread"></div>
 <script>
-(function() { 
-var d = document, s = d.createElement('script');
-s.src = 'https://best-small-forwards.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
+  function fetchPage(name) {
+    fetch(name).then(function(response) {
+      response.text().then(function(text) {
+        document.querySelector('article').innerHTML = text;
+      })
+    });
+  };
+  if(location.hash){
+    fetchPage(location.hash.substr(2));
+  } else {
+    fetchPage('index');
+  }
+  fetch('list').then(function(response){
+    response.text().then(function(text){
+      var lists = text.split(',');
+      var i =0;
+      var tags='';
+      while(i < lists.length) {
+        var list=lists[i];
+        var tag= '<li><a href="#!'+list+'" onclick="fetchPage(\''+list+'\')">'+list+'</a></li>';
+        tags = tags + tag;
+        i = i+1;
+      }
+      document.querySelector('#nav').innerHTML = tags; 
+    })
+  });
 </script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-</p>
 </body>
 </html>
