--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <title>Best small forwards</title>
 <meta charset="utf-8">
 <script src="colors.js"></script>
+<link href="favicon.ico" rel="shortcut icon">
 </head>
 
 <body>
